# jelly_c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/glad/: gl.h
src/: gl.c  main.c  shader.c  shader.h
src/engine/: array_list.h  config.h  global.h  input.h  io.h  mat.h  physics.h  render.h  time.h  types.h  util.h
src/engine/array_list/: array_list.c
src/engine/config/: config.c
src/engine/input/: input.c
src/engine/io/: io.c
src/engine/math/: mat.c  mat.h  util.h  vec.c  vec.h
src/engine/physics/: physics.c  physics_internal.h
src/engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
src/engine/time/: time.c
src/math/: mat.c  util.h  vec.c
src/shaders/: default.frag.glsl  fragment.glsl
src/test/: test_common.h  test_mat.c  test_vec.c
